# thermite

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
src/: lcg.rs  logger.rs  main.rs  watchdog.rs
