[package]
name = "thermite"
version = "0.2.0"
authors = ["Richard Bradfield <richard.bradfield@hpe.com>",
           "Steven Williamson <steven.williamson@hpe.com>"]
license = "GPLv3"
repository = "https://github.com/bradfirj/thermite"
description = """
Thermite, a random I/O generation tool, written in Rust.
"""

[dependencies]
rand = "*"
getopts = "*"
num = "*"
log = "0.3"
time = "*"